--- a/met4j-graph/pom.xml
+++ b/met4j-graph/pom.xml
@@ -2,6 +2,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+  <parent>
+    <groupId>fr.inra.toulouse.metexplore</groupId>
+    <artifactId>met4j</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+  </parent>
+
   <groupId>fr.inra.toulouse.metexplore</groupId>
   <artifactId>met4j-graph</artifactId>
   <version>0.0.1-SNAPSHOT</version>
