--- a/pom.xml
+++ b/pom.xml
@@ -18,4 +18,43 @@
     <module>met4j-report</module>
   </modules>
 
+  <description>A java library dedicated to metabolic network analysis</description>
+  
+  <organization>
+  	<url>www.inra.fr</url>
+  	<name>Institut national de la recherche agronomique</name>
+  </organization>
+  
+  <issueManagement>
+  	<url>http://vm-metexplore-dev.toulouse.inra.fr:3000/cfrainay/met4jTest/issues</url>
+  	<system>GitHub</system>
+  </issueManagement>
+  
+  
+  <reporting>
+  	<plugins>
+  		<plugin>
+  			<groupId>org.apache.maven.plugins</groupId>
+  			<artifactId>maven-javadoc-plugin</artifactId>
+  			<version>2.10.4</version>
+  		</plugin>
+  		<plugin>
+  			<groupId>org.apache.maven.plugins</groupId>
+  			<artifactId>maven-surefire-plugin</artifactId>
+  			<version>2.19.1</version>
+  		</plugin>
+  		<plugin>
+  			<groupId>org.codehaus.mojo</groupId>
+  			<artifactId>jxr-maven-plugin</artifactId>
+  			<version>2.0-beta-1</version>
+  		</plugin>
+  		<plugin>
+	  		<groupId>org.apache.maven.plugins</groupId>
+	  		<artifactId>maven-clover-plugin</artifactId>
+	  		<version>2.4</version>
+	  	</plugin>
+  	</plugins>
+  </reporting>
+
+
 </project>
