add new toolbox module. The toolbox module is a bundle of all other modules and should also contains top-level api. The pom is set in order to build an executable jar embarking all dependencies. gitignore file also modified : log files now ignored

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <module>met4j-mathUtils</module>
     <module>met4j-graph</module>
     <module>met4j-report</module>
+    <module>met4j-toolbox</module>
   </modules>
 
   <description>A java library dedicated to metabolic network analysis</description>
