--- a/met4j-toolbox/pom.xml
+++ b/met4j-toolbox/pom.xml
@@ -50,6 +50,17 @@
     	<artifactId>met4j-report</artifactId>
     	<version>0.0.1-SNAPSHOT</version>
     </dependency>
+    <dependency>
+    	<groupId>org.kohsuke.args4j</groupId>
+    	<artifactId>args4j-maven-plugin</artifactId>
+    	<version>2.33</version>
+    	<type>maven-plugin</type>
+    </dependency>
+    <dependency>
+    	<groupId>fr.inra.toulouse.metexplore</groupId>
+    	<artifactId>met4j-cytoscape</artifactId>
+    	<version>0.0.1-SNAPSHOT</version>
+    </dependency>
   </dependencies>
  
   <description>bundle of all met4j modules and api</description>
