--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <module>met4j-toolbox</module>
     <module>met4j-cytoscape</module>
     <module>met4j-io</module>
+      <module>met4j-mapping</module>
   </modules>
 
   <description>A java library dedicated to metabolic network analysis</description>
