--- a/met4j-flux/pom.xml
+++ b/met4j-flux/pom.xml
@@ -18,7 +18,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.19.1</version>
                 <configuration>
-                    <argLine>-Djava.library.path=/usr/lib/x86_64-linux-gnu/jni:/usr/local/cplex/cplex/bin/x86-64_sles10_4.1/:/usr/lib/x86_64-linux-gnu/jni</argLine>
+<!--                    <argLine>-Djava.library.path=/usr/lib/x86_64-linux-gnu/jni:/usr/local/cplex/cplex/bin/x86-64_sles10_4.1/:/usr/lib/x86_64-linux-gnu/jni</argLine>-->
                     <excludes>
                         <exclude>**/integration_test/*</exclude>
                     </excludes>
