--- a/met4j-flux/pom.xml
+++ b/met4j-flux/pom.xml
@@ -18,11 +18,55 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.19.1</version>
                 <configuration>
-<!--                    <argLine>-Djava.library.path=/usr/lib/x86_64-linux-gnu/jni:/usr/local/cplex/cplex/bin/x86-64_sles10_4.1/:/usr/lib/x86_64-linux-gnu/jni</argLine>-->
-                    <excludes>
-                        <exclude>**/integration_test/*</exclude>
-                    </excludes>
+                    <argLine>
+                        -Djava.library.path=/usr/lib/x86_64-linux-gnu/jni:/usr/local/cplex/cplex/bin/x86-64_sles10_4.1/:/usr/lib/x86_64-linux-gnu/jni
+                    </argLine>
                 </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.22.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <id>add-integration-test-source</id>
+                        <phase>generate-test-sources</phase>
+                        <goals>
+                            <goal>add-test-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>src/integration_test/java</source>
+                            </sources>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>add-integration-test-resource</id>
+                        <phase>generate-test-resources</phase>
+                        <goals>
+                            <goal>add-test-resource</goal>
+                        </goals>
+                        <configuration>
+                            <resources>
+                                <resource>
+                                    <directory>src/integration_test/resources</directory>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
@@ -111,6 +155,16 @@
             <groupId>cplex</groupId>
             <artifactId>cplex</artifactId>
             <version>10.4.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-invoker-plugin</artifactId>
+            <version>3.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>build-helper-maven-plugin</artifactId>
+            <version>3.0.0</version>
         </dependency>
     </dependencies>
 
