--- a/met4j-core/pom.xml
+++ b/met4j-core/pom.xml
@@ -8,11 +8,25 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
 
+  <scm>
+    <developerConnection>scm:git:https://forgemia.inra.fr/metexplore/met4j/blob/master/met4j-core/</developerConnection>
+  </scm>
+
   <artifactId>met4j-core</artifactId>
   <packaging>jar</packaging>
 
   <name>met4j-core</name>
   <url>http://maven.apache.org</url>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>3.0.0-M1</version>
+      </plugin>
+    </plugins>
+  </build>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
