--- a/met4j-core/pom.xml
+++ b/met4j-core/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -8,25 +7,11 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
 
-  <scm>
-    <developerConnection>scm:git:https://forgemia.inra.fr/metexplore/met4j/blob/master/met4j-core/</developerConnection>
-  </scm>
-
   <artifactId>met4j-core</artifactId>
   <packaging>jar</packaging>
 
   <name>met4j-core</name>
   <url>http://maven.apache.org</url>
-
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-release-plugin</artifactId>
-        <version>3.0.0-M1</version>
-      </plugin>
-    </plugins>
-  </build>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
