--- a/met4j-toolbox/pom.xml
+++ b/met4j-toolbox/pom.xml
@@ -1,85 +1,87 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>fr.inrae.toulouse.metexplore</groupId>
-    <artifactId>met4j</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  
-  <artifactId>met4j-toolbox</artifactId>
-  <name>met4j-toolbox</name>
-  <url>http://maven.apache.org</url>
-  
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-  </properties>
-  
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-    	<groupId>fr.inrae.toulouse.metexplore</groupId>
-    	<artifactId>met4j-chemUtils</artifactId>
-    	<version>0.0.1-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-    	<groupId>fr.inrae.toulouse.metexplore</groupId>
-    	<artifactId>met4j-core</artifactId>
-    	<version>0.0.1-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-    	<groupId>fr.inrae.toulouse.metexplore</groupId>
-    	<artifactId>met4j-mathUtils</artifactId>
-    	<version>0.0.1-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-    	<groupId>fr.inrae.toulouse.metexplore</groupId>
-    	<artifactId>met4j-graph</artifactId>
-    	<version>0.0.1-SNAPSHOT</version>
-    </dependency>
-	  <dependency>
-		  <groupId>fr.inrae.toulouse.metexplore</groupId>
-		  <artifactId>met4j-mapping</artifactId>
-		  <version>0.0.1-SNAPSHOT</version>
-	  </dependency>
-  </dependencies>
- 
-  <description>bundle of all met4j modules and api</description>
-  
-  
-  <build>
-  	<plugins>
-  		<plugin>
-  			<groupId>org.apache.maven.plugins</groupId>
-  			<artifactId>maven-assembly-plugin</artifactId>
-  			<version>3.0.0</version>
-		    <configuration>
-		      <descriptorRefs>
-		        <descriptorRef>jar-with-dependencies</descriptorRef>
-		      </descriptorRefs>
-		      <archive>
-		        <manifest>
-		          <mainClass>fr.inrae.toulouse.metexplore.met4j_toolbox.Main</mainClass>
-		        </manifest>
-		      </archive>
-		    </configuration>
-		    <executions>
-		      <execution>
-		        <phase>package</phase>
-		        <goals>
-		          <goal>single</goal>
-		        </goals>
-		      </execution>
-		    </executions>
-  		</plugin>
-  	</plugins>
-  </build>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+         xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>fr.inrae.toulouse.metexplore</groupId>
+        <artifactId>met4j</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+    </parent>
+
+    <artifactId>met4j-toolbox</artifactId>
+    <name>met4j-toolbox</name>
+    <url>http://maven.apache.org</url>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>args4j</groupId>
+            <artifactId>args4j</artifactId>
+            <version>2.33</version>
+        </dependency>
+        <dependency>
+            <groupId>fr.inrae.toulouse.metexplore</groupId>
+            <artifactId>met4j-chemUtils</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>fr.inrae.toulouse.metexplore</groupId>
+            <artifactId>met4j-core</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>fr.inrae.toulouse.metexplore</groupId>
+            <artifactId>met4j-mathUtils</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>fr.inrae.toulouse.metexplore</groupId>
+            <artifactId>met4j-graph</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>fr.inrae.toulouse.metexplore</groupId>
+            <artifactId>met4j-mapping</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+    </dependencies>
+
+    <description>bundle of all met4j modules and api</description>
+
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <archive>
+                        <manifest>
+                            <mainClass>fr.inrae.toulouse.metexplore.met4j_toolbox.Main</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
