--- a/met4j-toolbox/pom.xml
+++ b/met4j-toolbox/pom.xml
@@ -38,6 +38,11 @@
         </dependency>
         <dependency>
             <groupId>fr.inrae.toulouse.metexplore</groupId>
+            <artifactId>met4j-io</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>fr.inrae.toulouse.metexplore</groupId>
             <artifactId>met4j-core</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
