--- a/met4j-flux/pom.xml
+++ b/met4j-flux/pom.xml
@@ -108,6 +108,7 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.0</version>
         </dependency>
+<!--        Locally installed-->
         <dependency>
             <groupId>glpk</groupId>
             <artifactId>glpk</artifactId>
@@ -142,7 +143,7 @@
             <artifactId>jfreechart</artifactId>
             <version>1.0.19</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/cplex/cplex -->
+        <!--        Locally installed-->
         <dependency>
             <groupId>ibm.ilog</groupId>
             <artifactId>cplex</artifactId>
