--- a/met4j-flux/pom.xml
+++ b/met4j-flux/pom.xml
@@ -17,15 +17,15 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.19.1</version>
-                <configuration>
-                    <argLine>
-                        -Djava.library.path=/usr/lib/x86_64-linux-gnu/jni:/usr/local/cplex/cplex/bin/x86-64_sles10_4.1/:/usr/lib/x86_64-linux-gnu/jni
-                    </argLine>
-                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>2.22.0</version>
+                <configuration>
+                    <argLine>
+                        -Djava.library.path=/usr/lib/x86_64-linux-gnu/jni:/usr/local/cplex/cplex/bin/x86-64_sles10_4.1/
+                    </argLine>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
