--- a/met4j-core/pom.xml
+++ b/met4j-core/pom.xml
@@ -51,6 +51,9 @@
             </goals>
           </execution>
         </executions>
+        <configuration>
+          <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
+        </configuration>
       </plugin>
     </plugins>
   </build>
