--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,13 @@
 
     <groupId>fr.inrae.toulouse.metexplore</groupId>
     <artifactId>met4j</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
     <packaging>pom</packaging>
 
     <scm>
         <developerConnection>scm:git:https://forgemia.inra.fr/metexplore/met4j/blob/master/</developerConnection>
-    </scm>
+      <tag>met4j-0.1.0</tag>
+  </scm>
 
     <name>met4j</name>
     <url>https://metexplore.toulouse.inrae.fr/met4j</url>
