--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
 
     <groupId>fr.inrae.toulouse.metexplore</groupId>
     <artifactId>met4j</artifactId>
-    <version>0.1.3</version>
+    <version>0.1.3-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <scm>
         <developerConnection>scm:git:ssh://git@forgemia.inra.fr:metexplore/met4j.git</developerConnection>
-      <tag>met4j-0.1.3</tag>
+      <tag>met4j-0.1.2</tag>
   </scm>
 
     <name>met4j</name>
