--- a/met4j-toolbox/pom.xml
+++ b/met4j-toolbox/pom.xml
@@ -71,7 +71,7 @@
     <description>bundle of all met4j modules and api</description>
 
 
-    <build>
+<!--    <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -154,5 +154,5 @@
                 </plugins>
             </build>
         </profile>
-    </profiles>
+    </profiles>-->
 </project>
