--- a/met4j-graph/pom.xml
+++ b/met4j-graph/pom.xml
@@ -52,7 +52,7 @@
             <version>0.1.6-SNAPSHOT</version>
         </dependency>
     </dependencies>
-    <build>
+<!--    <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -112,5 +112,5 @@
                 </plugins>
             </build>
         </profile>
-    </profiles>
+    </profiles>-->
 </project>
