[maven-release-plugin] prepare release met4j-0.1.9

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>fr.inrae.toulouse.metexplore</groupId>
     <artifactId>met4j</artifactId>
 
-    <version>0.1.9-SNAPSHOT</version>
+    <version>0.1.9</version>
     <packaging>pom</packaging>
 
     <name>met4j</name>
@@ -47,7 +47,7 @@
 
     <scm>
         <developerConnection>scm:git:ssh://git@forgemia.inra.fr/metexplore/met4j.git</developerConnection>
-        <tag>met4j-0.1.2</tag>
+        <tag>met4j-0.1.9</tag>
         <url>https://forgemia.inra.fr/metexplore/met4j/-/tree/master</url>
     </scm>
 
