fix bug in side compound import

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ jsbml.log
 
 
 met4j-core/src/main/java/fr/inra/toulouse/metexplore/met4j_core/Test\.java
+/met4j-toolbox/src/main/java/fr/inrae/toulouse/metexplore/met4j_toolbox/sandbox/
