debug gitlab ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,9 +35,10 @@ deployCentral:
   stage: deploy
   before_script:
     ## Add gpg key to sign
+    - echo "$GPG_PASSPHRASE"
     - gpg2 --batch --import <(echo "$GPG_PASSPHRASE")
   script:
-    - mvn $MAVEN_CLI_OPTS --batch-mode release:prepare -DautoVersionSubmodules=true
+    - mvn $MAVEN_CLI_OPTS --batch-mode release:prepare -DautoVersionSubmodules=true -Dmaven.test.skip=true
     - mvn release:perform
   only:
     - /^release.*$/
