debug gitlab.ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,10 +34,9 @@ deploySnapshot:
 deployCentral:
   stage: deploy
   before_script:
-    - yum update -y
-    - yum install -y which && \
-    - yum clean all
-    - which ssh-agent || ( yum update -y && yum install -y  openssh-client )
+    - apt-get update -qy
+    - apt-get install which -qqy
+    - 'which ssh-agent || ( apt-get update -qy && apt-get install openssh-client -qqy )'
     - eval `ssh-agent -s`
     - echo "${SSH_PRIVATE_KEY}" | tr -d '\r' | ssh-add - > /dev/null # add ssh ke
     - mkdir -p ~/.ssh
