deploy only on master and from commit release or hotfix

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,9 +48,7 @@ deployCentral:
     - git config --global user.email "$env:GITLAB_USER_EMAIL"
     - git config --global user.name "$env:GITLAB_USER_NAME"
     - git checkout -B "$CI_BUILD_REF_NAME"
-    - mvn $MAVEN_CLI_OPTS build-helper:parse-version versions:set -DnewVersion="\${parsedVersion.majorVersion}.\${parsedVersion.nextMinorVersion}.0-SNAPSHOT" versions:commit
-    - mvn $MAVEN_CLI_OPTS release:prepare -DautoVersionSubmodules=true -Dmaven.test.skip=true -DscmCommentPrefix="[skip ci]"
+    - mvn $MAVEN_CLI_OPTS release:prepare -DautoVersionSubmodules=true -Dmaven.test.skip=true -DscmCommentPrefix="[skip ci]" -DpushChanges=false
     - mvn $MAVEN_CLI_OPTS release:perform -Darguments=-Dgpg.passphrase=${GPG_PASSPHRASE}
-  only:
-    - /^release.*$/
-
+  rules:
+    if: '$CI_COMMIT_BRANCH == "master" && ($CI_COMMIT_MESSAGE =~ /hotfix/ || $CI_COMMIT_MESSAGE =~ /release/)'
