--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ cache:
   paths:
     - .m2/repository/
     - target/
+    - coverage/
 
 build:
   stage: build
@@ -17,12 +18,10 @@ build:
 test:
   stage: test
   script:
-    - mvn test
+    - mvn clean test
+    - cat coverage/target/site/jacoco-aggregate/index.html | grep -o '<tfoot>.*</tfoot>'
 
-verify:
-  stage: test
-  script:
-    - mvn verify
+
 
 deploySnapshot:
   stage: deploy
