--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,11 @@
                     <autoReleaseAfterClose>true</autoReleaseAfterClose>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
+            </plugin>
         </plugins>
     </build>
     <profiles>
@@ -169,6 +174,7 @@
         <module>met4j-graph</module>
         <module>met4j-toolbox</module>
         <module>met4j-mapping</module>
+        <module>coverage</module>
     </modules>
 
     <dependencies>
