mvn package set up
mvn package now launchs the tests and assembly:single plugin

--- a/met4j-toolbox/pom.xml
+++ b/met4j-toolbox/pom.xml
@@ -85,6 +85,15 @@
                         </manifest>
                     </archive>
                 </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
+                        <phase>package</phase> <!-- bind to the packaging phase -->
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <version>2.2-beta-5</version>
             </plugin>
             <plugin>
