Remove getCallerClass error
https://stackoverflow.com/questions/53049346/is-log4j2-compatible-with-java-11

--- a/met4j-toolbox/pom.xml
+++ b/met4j-toolbox/pom.xml
@@ -83,6 +83,9 @@
                         <manifest>
                             <mainClass>fr.inrae.toulouse.metexplore.met4j_toolbox.Main</mainClass>
                         </manifest>
+                        <manifestEntries>
+                            <Multi-Release>true</Multi-Release>
+                        </manifestEntries>
                     </archive>
                 </configuration>
                 <executions>
